--- a/index.html
+++ b/index.html
@@ -3,10 +3,21 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+
     <title>ระบบติดตามการแก้ผลการเรียนโรงเรียนเกาะสมุย</title>
-    <link rel="manifest" href="/manifest.json">
+
+    <!-- PWA Manifest -->
+    <link rel="manifest" href="/manifest.json" />
+
+    <!-- Tailwind (CDN – ใช้ได้ ปล่อย warning ได้) -->
     <script src="https://cdn.tailwindcss.com"></script>
-    <link href="https://fonts.googleapis.com/css2?family=Sarabun:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+
+    <!-- Google Font -->
+    <link
+      href="https://fonts.googleapis.com/css2?family=Sarabun:wght@300;400;500;600;700&display=swap"
+      rel="stylesheet"
+    />
+
     <script>
       tailwind.config = {
         theme: {
@@ -20,48 +31,41 @@
               success: '#10B981',
               warning: '#F59E0B',
               danger: '#EF4444',
-            }
-          }
-        }
-      }
+            },
+          },
+        },
+      };
     </script>
+
     <style>
       body {
         font-family: 'Sarabun', sans-serif;
-        background-color: #F3F4F6;
+        background-color: #f3f4f6;
+        margin: 0;
       }
     </style>
-  <script type="importmap">
-{
-  "imports": {
-    "react": "https://aistudiocdn.com/react@^19.2.0",
-    "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.0/",
-    "react/": "https://aistudiocdn.com/react@^19.2.0/",
-    "recharts": "https://aistudiocdn.com/recharts@^3.5.1",
-    "lucide-react": "https://aistudiocdn.com/lucide-react@^0.555.0",
-    "vite": "https://aistudiocdn.com/vite@^7.2.6",
-    "@vitejs/plugin-react": "https://aistudiocdn.com/@vitejs/plugin-react@^5.1.1",
-    "mammoth": "https://esm.sh/mammoth@1.6.0",
-    "docx": "https://esm.sh/docx@7.8.2",
-    "firebase/app": "https://esm.sh/firebase@10.8.0/app",
-    "firebase/firestore": "https://esm.sh/firebase@10.8.0/firestore",
-    "firebase/": "https://esm.sh/firebase@^12.6.0/"
-  }
-}
-</script>
-<link rel="stylesheet" href="/index.css">
-</head>
+  </head>
+
   <body>
+    <!-- React Mount Point -->
     <div id="root"></div>
-    <script type="module" src="/index.tsx"></script>
+
+    <!-- ❗ สำคัญมาก: ให้ Vite inject JS เอง -->
+    <!-- ❌ ห้ามใส่ <script src="/index.tsx"> -->
+    <!-- ❌ ห้ามใช้ importmap -->
+
+    <!-- Service Worker -->
     <script>
       if ('serviceWorker' in navigator) {
         window.addEventListener('load', () => {
-          navigator.serviceWorker.register('/sw.js').then(registration => {
-            console.log('SW registered: ', registration);
-          }).catch(registrationError => {
-            console.log('SW registration failed: ', registrationError);
-          });
+          navigator.serviceWorker
+            .register('/sw.js')
+            .then((registration) => {
+              console.log('SW registered:', registration);
+            })
+            .catch((error) => {
+              console.log('SW registration failed:', error);
+            });
         });
       }
     </script>
